--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>Demo</title>
 </head>
 <body>
-    <h1>Kitso Senwedi</h1>
-    <p>
-<img src="/images/profilepic.jpg" alt="profile picture">
-As a passionate information technology graduate with a Bachelor's degree and three years of academic experience, I am dedicated to leveraging technology to create innovative solutions. I thrive on tackling challenging problems and collaborating with diverse teams to deliver impactful results.
+       
+<ul class="nav">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#home">Home</a></li>
+</ul>
+
+    <div class="header">
+        <h1>Kitso Senwedi</h1>
+        <p>
+            As a passionate information technology graduate with a Bachelor's degree and three years of academic experience, I am dedicated to leveraging technology to create innovative solutions. I thrive on tackling challenging problems and collaborating with diverse teams to deliver impactful results.
+        </p>
+    </div>
+ 
+<p>
 
 <h2>Skills and Expertise</h2>
 <ul>
@@ -37,5 +48,9 @@ Feel free to explore my repositories and <a href="https://github.com/KitsoSenwed
 
 Thank you for visiting my profile, and I look forward to engaging with the vibrant developer community
     </p>
+
+    <div class="footer">
+        <h2>Developed by kitso Senwedi</h2>
+    </div>
 </body>
 </html>
