--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Demo</title>
 </head>
 <body>
-       
+
 <ul class="nav">
     <li><a href="#home">Home</a></li>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="/contact.html">Contact Info</a></li>
 </ul>
 
     <div class="header">
-        <h1>Kitso Senwedi</h1>
+        <h1 id="home">Kitso Senwedi</h1>
         <p>
             As a passionate information technology graduate with a Bachelor's degree and three years of academic experience, I am dedicated to leveraging technology to create innovative solutions. I thrive on tackling challenging problems and collaborating with diverse teams to deliver impactful results.
         </p>
     </div>
  
-<p>
+<p id="about">
 
 <h2>Skills and Expertise</h2>
 <ul>
